termine la seccion 2, portafolios destacados

--- a/index.html
+++ b/index.html
@@ -22,21 +22,40 @@
     <main>
         <section class="section1">
             <div>
-                <div>
-                <h1>Hola, soy <b>Joaquin Gonzalez Alitta</b></h1>
-                </div>   
-
                 <img src="images/montaña.png" alt="" class="fondo1">
+                <h1> Hola, soy <b>Joaquin Gonzalez Alitta</b></h1>
+
             </div>
 
         </section>
-        <section>
-            
+        <section class="section2">
+            <h2 class="PresentacionP"> Portfolios <b>Destacados</b></h2>
+            <div>
+                <a href="#">All</a>
+                <a href="#">Website</a>
+                <a href="#">Mockups</a>
+                <a href="#">Posters</a>
+            </div>
+            <div class="portafolio1">
+                <div>
+                    <img src="" alt="" class="web1">
+                </div>
+                <div></div>
+
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </section>
         <section></section>
         <section></section>
         <section></section>
-
+        <script src="js/app.js"> </script>
     </main>
     <footer></footer>
 </body>
