termine los 3 primeros portfolio

--- a/index.html
+++ b/index.html
@@ -36,17 +36,47 @@
                 <a href="#">Mockups</a>
                 <a href="#">Posters</a>
             </div>
-            <div class="portafolio1">
+            <div class="portfolio1">
                 <div>
                     <img src="" alt="" class="web1">
                 </div>
-                <div></div>
+                <div>
+                    <p>Oribons Website</p>
+                    <p>WWW.ORIBONS.COM</p>
+                </div>
 
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="portfolio2">
+                <div> 
+                    <img src="" alt="" class="web2">
+                </div>
+                <div>
+                    <p> Logobee ads</p>
+                    <p> WWW.LOGOBEEADS.IN</p>
+                </div>
+
+            </div>
+            <div class="web3">
+                <div>
+                    <img src="" alt="" class="web3">
+                </div>
+                <div>
+                    <p>Cliffort Website</p>
+                    <p>WWW.CLIFFORT.AE</p>
+                </div>
+            </div>
+            <div class="portfolio4">
+                <div>
+                    <img src="" alt="" class="web4">
+                </div>
+                <div>
+                    <p>Candid Radio</p>
+                    <p>WWW.CANDIDRADIO.COM</p>
+                </div>
+            </div>
+            <div class="">
+
+            </div>
             <div></div>
             <div></div>
             <div></div>
