termine los 3 siguentes portafolios

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="portfolio1">
                 <div>
-                    <img src="" alt="" class="web1">
+                    <img src="" alt="" id="web1">
                 </div>
                 <div>
                     <p>Oribons Website</p>
@@ -48,7 +48,7 @@
             </div>
             <div class="portfolio2">
                 <div> 
-                    <img src="" alt="" class="web2">
+                    <img src="" alt="" id="web2">
                 </div>
                 <div>
                     <p> Logobee ads</p>
@@ -58,7 +58,7 @@
             </div>
             <div class="web3">
                 <div>
-                    <img src="" alt="" class="web3">
+                    <img src="" alt="" id="web3">
                 </div>
                 <div>
                     <p>Cliffort Website</p>
@@ -67,18 +67,40 @@
             </div>
             <div class="portfolio4">
                 <div>
-                    <img src="" alt="" class="web4">
+                    <img src="" alt="" id="web4">
                 </div>
                 <div>
                     <p>Candid Radio</p>
                     <p>WWW.CANDIDRADIO.COM</p>
                 </div>
             </div>
-            <div class="">
-
+            <div class="portfolio5">
+                <div> 
+                    <img src="" alt="" id="web5">
+                </div>
+                <div>
+                    <p>GreenRay</p>
+                    <p>WWW.GREENRAY.COM</p>
+                </div>
             </div>
-            <div></div>
-            <div></div>
+            <div class="portfolio6">
+                <div>
+                    <img src="" alt="" id="web6">
+                </div>
+                <div>
+                    <p>i-Gallery</p>
+                    <p>WW.IGALLERY.IN</p>
+                </div>
+            </div>
+            <div class="portfolio7">
+                <div>
+                    <img src="" alt="" id="web7">
+                </div>
+                <div>
+                    <p>MEI</p>
+                    <p><WWW class="MEIWANDOOR COM"></WWW></p>
+                </div>
+            </div>
             <div></div>
             <div></div>
         </section>
