termine los portfolios

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section class="section1">
             <div>
-                <img src="images/montaña.png" alt="" class="fondo1">
+                <img src="images/proyecto2.png" alt="" class="fondo1">
                 <h1> Hola, soy <b>Joaquin Gonzalez Alitta</b></h1>
 
             </div>
@@ -38,7 +38,7 @@
             </div>
             <div class="portfolio1">
                 <div>
-                    <img src="" alt="" id="web1">
+                    <img src="images/proyecto3.png" alt="" id="web1">
                 </div>
                 <div>
                     <p>Oribons Website</p>
@@ -48,7 +48,7 @@
             </div>
             <div class="portfolio2">
                 <div> 
-                    <img src="" alt="" id="web2">
+                    <img src="images/proyecto4.png" alt="" id="web2">
                 </div>
                 <div>
                     <p> Logobee ads</p>
@@ -58,7 +58,7 @@
             </div>
             <div class="web3">
                 <div>
-                    <img src="" alt="" id="web3">
+                    <img src="images/proyecto5.png" alt="" id="web3">
                 </div>
                 <div>
                     <p>Cliffort Website</p>
@@ -67,7 +67,7 @@
             </div>
             <div class="portfolio4">
                 <div>
-                    <img src="" alt="" id="web4">
+                    <img src="images/proyecto6.png" alt="" id="web4">
                 </div>
                 <div>
                     <p>Candid Radio</p>
@@ -76,7 +76,7 @@
             </div>
             <div class="portfolio5">
                 <div> 
-                    <img src="" alt="" id="web5">
+                    <img src="images/proyecto7.png" alt="" id="web5">
                 </div>
                 <div>
                     <p>GreenRay</p>
@@ -85,7 +85,7 @@
             </div>
             <div class="portfolio6">
                 <div>
-                    <img src="" alt="" id="web6">
+                    <img src="images/proyecto8.png" alt="" id="web6">
                 </div>
                 <div>
                     <p>i-Gallery</p>
@@ -94,17 +94,35 @@
             </div>
             <div class="portfolio7">
                 <div>
-                    <img src="" alt="" id="web7">
+                    <img src="images/proyecto9.png" alt="" id="web7">
                 </div>
                 <div>
                     <p>MEI</p>
-                    <p><WWW class="MEIWANDOOR COM"></WWW></p>
+                    <p>WWW.MEIWANDOOR.COM</p>
                 </div>
             </div>
-            <div></div>
-            <div></div>
+            <div class="portfolio8">
+                <div>
+                    <img src="images/proyecto10.png" alt="" id="web8">
+                </div>
+                <div>
+                    <p>GreeRay</p>
+                    <p>WWW.GREENRAY.COM</p>
+                </div>
+            </div>
+            <div class="portolio9">
+                <div>
+                    <img src="images/proyecto11.png" alt="" id="web9">
+                </div>
+                <div>
+                    <p>Logobee Ads</p>
+                    <p>WWW.LOGOBEEADS.IN</p>
+                </div>
+            </div>
         </section>
-        <section></section>
+        <section>
+            
+        </section>
         <section></section>
         <section></section>
         <script src="js/app.js"> </script>
