termine la seccion 3, about me

--- a/index.html
+++ b/index.html
@@ -120,8 +120,16 @@
                 </div>
             </div>
         </section>
-        <section>
-            
+        <section class="section3">
+            <div>
+                <img src="images/foto2.jpeg" alt="" id="aboutme">
+            </div>
+            <div>
+                <h2>Sobre<b>Mi</b></h2>
+                <p> Diseño y desarrollo experiencias que hacen mas simple la vida de las personas</p>
+                    <p>Skills: HTML, CSS, JAVASCRIPT </p>
+            </div>
+            <button> Download cv</button>
         </section>
         <section></section>
         <section></section>
